--- a/MAIN INDEX.HTML
+++ b/MAIN INDEX.HTML
@@ -29,16 +29,16 @@
     <!--Hero section-->
     <header>
       <img
-        src="./Fast-Furious-Paul-Walker-Toyota-Supra-MK4-Replika-Header.jpg"
+        src="./Toyota-Supra-MK4-Replika-Header.jpg"
         alt="profile image"
         width="300"
         length="600"
       />
       <h1>WELCOME TO MY WEBSITE/font red</h1>
-      <h1>Designed by ian gachigi</h1>
-      <h1>Coded by ianis</h1>
+      <h1>Designed by Lewis Karanu</h1>
+      <h1>Coded by Lewis</h1>
 
-      <h1>Hi,am gachigi and welcome to my website</h1>
+      <h1>Hi,am Lewis and welcome to my website</h1>
       <p>
         fullstack web developmentwith over ten years experience helping people
         and organisations create solutions through web applications.
